--- a/stats.html
+++ b/stats.html
@@ -14,20 +14,20 @@ color="#FF00CC">----------------------------------------------------------------
 <tr align="left" valign="top" bgcolor="#CCCCCC"> <td height="5" colspan="2"></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF"> 
 <td height="10" colspan="2"></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF"> 
 <td height="20" colspan="2"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>Criminal rating:</strong>
-Thug (705)</font></td>  </tr>  <tr align="left" valign="top" bgcolor="#FFFFFF"><td height="10" colspan="2"></td>  </tr>
+Thug (718)</font></td>  </tr>  <tr align="left" valign="top" bgcolor="#FFFFFF"><td height="10" colspan="2"></td>  </tr>
 </font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
 <tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
 Percentage completed</strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
-16%</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
+18%</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
 <tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
 Mission attempts</strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
-26</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
+27</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
 <tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
 Playing Time</strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
- 6:05</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
+ 6:39</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
 <tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
 Days passed in game</strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
-21</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
+22</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
 <tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
 Safehouse visits</strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
 8</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
@@ -39,10 +39,10 @@ Hidden Packages found</strong></font></td> <td width="500" align="right" valign=
   8 out of 100</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
 <tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
 People you've wasted</strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
-395</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
+396</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
 <tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
 People wasted by others</strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
-65</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
+69</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
 <tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
 Road Vehicles destroyed</strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
 36</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
@@ -57,10 +57,10 @@ Tires popped with gunfire</strong></font></td> <td width="500" align="right" val
 15</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
 <tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
 Total number of wanted stars attained</strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
-46</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
+47</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
 <tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
 Total number of wanted stars evaded</strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
-30</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
+31</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
 <tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
 Times busted</strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
 1</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
@@ -72,7 +72,7 @@ Number of headshots</strong></font></td> <td width="500" align="right" valign="m
 23</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
 <tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
 Daily police spending</strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
-$59262.00</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
+$76121.00</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
 <tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
 Least favorite gang</strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
 <tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
@@ -98,13 +98,13 @@ Accuracy</strong></font></td> <td width="500" align="right" valign="middle" bgco
 36%</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
 <tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
 Dist. traveled on foot (miles)</strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
-8.87</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
+9.06</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
 <tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
 Dist. traveled by car (miles)</strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
-194.79</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
+197.87</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
 <tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
 Dist. traveled by bike (miles)</strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
-11.02</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
+29.79</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
 <tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
 Dist. traveled by boat (miles)</strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
 6.24</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
@@ -116,7 +116,7 @@ Dist. traveled by helicopter (miles)</strong></font></td> <td width="500" align=
 3.71</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
 <tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
 Total distance traveled (miles)</strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
-225.26</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
+247.30</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
 <tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
 Max. INSANE Jump dist. (m)</strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
 70.00</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
@@ -186,6 +186,9 @@ Stores Knocked Off</strong></font></td> <td width="500" align="right" valign="mi
 Assassination Contracts Completed</strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
   2 out of 5</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
 <tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
+Pizza's Delivered</strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
+55</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
+<tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
 Flight hours</strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
  0:00</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
 <tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
@@ -212,7 +215,7 @@ Fashion Budget</strong></font></td> <td width="500" align="right" valign="middle
 $50.00</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
 <tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
 Property Budget</strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
-$12500.00</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
+$20500.00</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
 <tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
 Auto Repair and Painting Budget</strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
 $2200.00</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
@@ -221,11 +224,13 @@ Property Destroyed</strong></font></td> <td width="500" align="right" valign="mi
 $152601.00</font></strong></div></td> </tr> <tr align="left" valign="top" bgcolor="#FFFFFF">  <td height="10" colspan="2"></td> </tr>
 <tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
 Property Owned</strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
-4<tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
+5<tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
  </strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
 3321 Vice Point<tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
  </strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
 Links View Apartment<tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
+ </strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
+El Swanko Casa<tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
  </strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
 1102 Washington Street<tr align="left" valign="top"><td width="500" height="22" bgcolor="#FFCCFF"><font color="#FF00CC" size="2" face="Arial, Helvetica, sans-serif"><strong>
  </strong></font></td> <td width="500" align="right" valign="middle" bgcolor="#FFCCFF"> <div align="right"><strong><font color="#FF00CC">
